# blendsphere-backend

./: .dockerignore.fastapi  .dockerignore.pocketbase  .env.example  .gitignore  Dockerfile.fastapi  Dockerfile.pocketbase  README.md  docker-compose.dev.yml  docker-compose.yml  docker-start.sh  flashcard-template-repository.py  main.py  pyproject.toml
src/: __init__.py
src/agent/: __init__.py  flashcard_agent.py  request_builder.py
src/app/: __init__.py  app.py
src/fsrs/: fsrs_manager.py
src/model/: __init__.py  flashcard.py  flashcard_generation.py  flashcard_request.py  flashcard_review_request.py
src/pb_utils/: __init__.py  client.py
src/pocketbase/: IMPORT_GUIDE.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  STATUS.md  install_pocketbase.sh  run_migrations.sh  run_pocketbase.sh  setup_collections.sh  test_connection.sh  verify_setup.sh
src/pocketbase/pb_migrations/: COMPLETION_SUMMARY.md  README.md  consolidate_schema.js  consolidate_schema.sh  consolidated_schema.json  example.json  import_collections.sh  initial_collections.js  initial_settings.js  initial_superuser.js  validate_schema.sh
src/pocketbase/pb_migrations/collections/: 0__authOrigins.json  1__superusers.json  2_users.json  7_comments.json  8_reactions.json  9_templates.json  aiPrompts.json  classes.json  comments.json  decks.json  fields.json  flashcardReviews.json  flashcards.json  lessons.json  (+1 more)
src/template/: flashcard_template_models.py  flashcard_template_repository.py
template/: flashcard_template_controller.py  flashcard_template_models.py  flashcard_template_repository.py
(+4 files in other folders)
