[project]
name = "blendsphere-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "pocketbase>=0.15.0",
    "pydantic>=2.11.4",
    "pydantic-ai>=0.2.6",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.23.0",
]
